# Rusty-Tuber

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config.toml  deny.toml  rustfmt.toml
.github/workflows/: rust.yml
assets/characters/wbc/: character.toml
scripts/: gen_placeholder_assets.py  setup-v4l2loopback.sh
src/: assets.rs  audio.rs  compositor.rs  config.rs  control.rs  lib.rs  main.rs  net.rs  protocol.rs  state.rs  webcam.rs
tests/: integration.rs
web/: app.js  index.html  stage.html
