[package]
name = "rusty-tuber"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Headless high-performance PNG-Tuber: drive a PNG avatar from your mic into a virtual webcam (v4l2loopback)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/BradMyrick/Rusty-Tuber"

[[bin]]
name = "rusty-tuber"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "io-util", "io-std"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
cpal = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
wide = { version = "0.7", default-features = false }

# Linux-only: v4l2loopback ioctl/write for the virtual webcam sink.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
